Revert "Fix testimonials wrapper gap warning"
This reverts commit 5fdfcac2113916c66539e30e712591c0365a4bf2.

--- a/src/components/TestimonialWrapper/TestimonialWrapper.scss
+++ b/src/components/TestimonialWrapper/TestimonialWrapper.scss
@@ -14,8 +14,8 @@ $_button-size: to-rem(40);
   }
 
   &__navigation {
-    column-gap: to-rem(10);
     display: flex;
+    gap: to-rem(10);
     margin-left: to-rem(20);
     margin-top: calc(-1rem - #{$_button-size});
     position: absolute;
